--- a/Tienda_Ropa/.classpath
+++ b/Tienda_Ropa/.classpath
@@ -6,6 +6,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="Test"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Atlax/Proyectos/Tienda_Ropa/postgresql-42.7.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
